<resources>
    <string name="app_name">Pillguin</string>

    <!-- main activity -->
    <string name="txt_welcome">Welcome to Pillguin</string>
    <string name="btn_continue">Continue</string>

    <!-- permissions -->
    <string name="txt_permition_denied">Permission denied: </string>

    <!-- fragment_add_medicine -->
    <string name="txt_add_medication">Add Medication</string>
    <string name="txt_medication_name">Medication name</string>
    <string name="txt_medication_type">Medication type</string>
    <string name="txt_medication_dosage">Medication dosage</string>
    <string name="txt_frequency_type">Frequency type</string>
    <string name="btn_add_medication">Add medication</string>
    <string name="msg_success_saved">Medication saved!</string>
    <string name="msg_error_name_required">Please enter a medication name.</string>
    <string name="msg_error_dosage_required">Please enter a medication dosage.</string>
    <string name="msg_error_schedule">Please complete the schedule.</string>

    <!-- do not change the order here! Check MedicineTypeIconMapper first -->


    <!-- do not change the order here! Check AddMedicineFragment.setUpFrequencyType() -->
    <string-array name="list_frequency_types">
        <item>Every X hours</item>
        <item>Intervals</item>
        <item>Specific days</item>
    </string-array>

    <!-- card_every_x_hour -->
    <string name="txt_hour_frequency">Every %d hours</string>
    <string name="txt_start_date">Start date</string>
    <string name="txt_hour">Hour</string>
    <string name="txt_end_date">End date</string>
    <string name="txt_no_end_date">No end date</string>
    <string name="msg_error_start_date_required">Start date is required</string>
    <string name="msg_error_end_date_required">End date is required</string>
    <string name="msg_error_time_required">Please select a time</string>

    <string name="txt_days_frequency">Days: %s</string>
    <!-- card_intervals -->
    <string name="txt_card_interval_title">Intervals</string>
    <string-array name="list_interval">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
    </string-array>
    <string name="msg_error_interval_required">Inform a interval</string>


    <!-- card_specific_days -->
    <string name="txt_custom_frequency">Custom Frequency</string>
    <string name="txt_week_monday">Monday</string>
    <string name="txt_week_tuesday">Tuesday</string>
    <string name="txt_week_wednesday">Wednesday</string>
    <string name="txt_week_thursday">Thursday</string>
    <string name="txt_week_friday">Friday</string>
    <string name="txt_week_saturday">Saturday</string>
    <string name="txt_week_sunday">Sunday</string>

    <string name="msg_error_weekdays_required">At least one weekday must be selected.</string>


    <!-- fragment_medicine -->
    <string name="txt_medicine_list">Medicine List</string>
    <string name="txt_took_it">I took it</string>
    <string name="txt_report_side_effects">Report side effects</string>
    <string name="txt_filters">Filters</string>
    <string-array name="list_filter_options">
        <item>All</item>
        <item>Today</item>
        <item>Taken</item>
    </string-array>

    <!-- fragment_report -->
    <string name="txt_describe_side_effect"> Describe the side effect</string>
    <string name="txt_submit"> Submit</string>
    <string name="msg_no_data_available">No medication data available.</string>

    <!-- fragment_medicine_details -->
    <string name="txt_tab_medicine_details">Details</string>
    <string name="txt_tab_medicine_taken_log">Taken Log</string>
    <string name="txt_tab_medicine_reported_side_effects">Side Effects</string>
    <string name="txt_no_schedule">No schedule set</string>

    <!-- fragment_medication_details -->
    <string name="txt_medication_details">Medication Details</string>
    <string name="txt_name"> Name:</string>
    <string name="txt_dosage"> Dosage:</string>
    <string name="txt_type"> Medication Type</string>
    <string name="txt_schedule"> Schedule:</string>
    <string name="txt_next_time">Next time:</string>

    <!-- fragment_taken_log_details -->
    <string name="txt_medication_log"> Your Medication Log</string>
    <string name="txt_keep_track"> Keep track of when you’ve taken your medicine</string>
    <string name="txt_recent"> Recent Intake Times</string>
    <string name="txt_no_data"> No entries yet. Mark your medicine as taken to see it here.</string>

    <!-- fragment_reported_side_effects -->
    <string name="txt_reported_side_effects_description">Description: %s</string>
    <string name="txt_reported_side_effects_date">Date: %s</string>
    <string name="txt_reported_side_effects_no_side_effects">No side effects reported"</string>

    <!-- Notification -->
    <string name="txt_notification_title">Medication Reminder</string>
    <string name="txt_notification_msg">It\'s time to take your medication: %s</string>
    <string name="txt_notification_action_taken">Mark as taken</string>
    <string name="txt_notification_action_see_detail">See datail</string>

    <string name="txt_notification_side_effect_title">How are you feeling?</string>
    <string name="txt_notification_side_effect_msg">Any side effects after taking %s?</string>
    <string name="txt_notification_action_im_fine">I\'m fine.</string>
    <string name="txt_notification_action_report_side_effect">Report side effect</string>


    <!-- Medication report -->
    <string name="txt_medication_report">Medication Report</string>
    <string name="doses_taken">Doses Taken: %1$d</string>
    <string name="expected_doses">Expected Doses: %1$d</string>
    <string name="missed_doses">Missed Doses: %1$d</string>
    <string name="adherence_percent">Adherence: %.1f%%</string>

    <!-- Side effect dialog -->
    <string name="txt_description_empty">Description cannot be empty</string>
    <string name="msg_side_effect_reported">Side effect reported</string>

    <!-- Date picker -->
    <string name="date_picker_invalid_format">"Invalid date format."</string>

    <string-array name="side_effect_severity_array">
        <item>Mild</item>
        <item>Moderate</item>
        <item>Severe</item>
        <item>Critical</item>
    </string-array>
    <string name="txt_reported_side_effects"> Reported Side Effects</string>
    <string name="txt_side_effects_list"> All side effects reported for this medication are shown below.</string>
    <string name="msg_you_took">Recorded! You took %s</string>
</resources>