<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/addFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/addTitle"
            style="@style/TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_medication" />

        <EditText
            android:id="@+id/edt_medication_name"
            style="@style/EditTextStyle"
            android:autofillHints="medicationName"
            android:hint="@string/txt_medication_name"
            android:inputType="text" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/LabelStyle"
                    android:text="@string/txt_medication_type" />

                <Spinner
                    android:id="@+id/spn_medication_type"
                    style="@style/SpinnerStyle" />

                <EditText
                    android:id="@+id/editTextText"
                    style="@style/EditTextStyle"
                    android:hint="@string/txt_medication_dosage"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/LabelStyle"
                    android:text="@string/txt_frequency_type" />

                <Spinner
                    android:id="@+id/spn_frequency"
                    style="@style/SpinnerStyle" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/frame_layout_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_save"
            style="@style/ButtonPrimary"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:text="@string/btn_add_medication" />

    </LinearLayout>
</ScrollView>