<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_custom_schedule"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView7"
                style="@style/LabelStyle"
                android:text="Frequencia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_frequency"
                    style="@style/TitleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/txt_hour_frequency" />

                <SeekBar
                    android:id="@+id/sek_frequency"
                    style="@style/SeekBarStyle"
                    android:layout_weight="1"
                    android:min="1"
                    android:max="24"
                    android:progress="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_start_date"
                style="@style/EditTextStyle"
                android:hint="@string/txt_start_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/edt_time"
                style="@style/EditTextStyle"
                android:hint="@string/txt_hour"
                android:inputType="time" />

            <EditText
                android:id="@+id/txt_end_date"
                style="@style/EditTextStyle"
                android:hint="@string/txt_end_date"
                android:inputType="date" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swh_no_end_date"
                style="@style/SwitchStyle"
                android:layout_gravity="right"
                android:text="@string/txt_no_end_date" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>