<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_custom_schedule"
        style="@style/CardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            style="@style/TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_card_interval_title" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txt_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"/>

            <Spinner
                android:id="@+id/spr_frequency"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>
            <EditText
                android:id="@+id/txt_start_date"
                style="@style/EditTextStyle"
                android:hint="@string/txt_start_date"
                android:inputType="date" />

            <EditText
                android:id="@+id/txt_end_date"
                style="@style/EditTextStyle"
                android:hint="@string/txt_end_date"
                android:inputType="date" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swh_no_end_date"
                style="@style/SwitchStyle"
                android:layout_gravity="right"
                android:text="@string/txt_no_end_date" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>