<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal">

            <!-- Title -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_medication_details"
                style="@style/TitleMedium"
                android:layout_margin="16dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CardViewStyle">
            <!-- Medication Info Card -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                   >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_name"
                        android:textStyle="bold"
                        android:textColor="#34495E"
                        android:paddingBottom="4dp" />

                    <TextView
                        android:id="@+id/textName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_dosage"
                        android:textStyle="bold"
                        android:textColor="#34495E"
                        android:paddingBottom="4dp" />

                    <TextView
                        android:id="@+id/textDose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_medication_type"
                        android:textStyle="bold"
                        android:textColor="#34495E"
                        android:paddingBottom="4dp" />

                    <TextView
                        android:id="@+id/textNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingBottom="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_schedule"
                        android:textStyle="bold"
                        android:textColor="#34495E"
                        android:paddingBottom="2dp" />

                    <TextView
                        android:id="@+id/textSchedule"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingBottom="8dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_next_time"
                        android:textStyle="bold"
                        android:textColor="#34495E"
                        android:paddingBottom="2dp"/>
                    <TextView
                        android:id="@+id/textNextTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:paddingBottom="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">
                <Button
                    android:id="@+id/btn_report_side_effects"
                    style="@style/ButtonPrimary"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/txt_report_side_effects" />
                <Button
                    android:id="@+id/btn_took_medicine"
                    style="@style/ButtonPrimary"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/txt_took_it" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
